Fix ruler overflow

--- a/src/scss/snippet.scss
+++ b/src/scss/snippet.scss
@@ -269,6 +269,7 @@ $LocalLeft: (
                     background-size: 100% 100%;
                     border-top-left-radius: 4px;
                     border-top-right-radius: 4px;
+                    overflow: hidden;
                     .rem-button__container {
                         z-index: 1;
                     }
